--- a/index.html
+++ b/index.html
@@ -246,11 +246,13 @@ class="card-wrapper hidden md:block absolute top-[50px] left-[100px] w-[100px] h
 style="background-image: url('line1.webp'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 </div>
 <!--line box ----------------------------------------------------------------------------------->
-<div id="card-wrapper"
-class="absolute top-[80px] left-[50px] w-[250px] sm:hidden">
-<div class="sm:hidden relative w-full h-[300px]">
-<img src="lbox.png"alt="Card background"
-class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-lg"/>
+<div id="left-video-panel"
+class="absolute top-[80px] left-[50px] w-[250px] aspect-video">
+<div class="relative w-full h-[300px]">
+<video class="absolute inset-0 w-full h-full object-cover" autoplay loop muted playsinline>
+<source src="holographicgradient.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
 </div>
 </div>
 </section>
