--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Animated Video Overlay Layout</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        /* Ensure no horizontal scrollbar */
+        body {
+            overflow-x: hidden;
+        }
+
         /* General transition for video overlay content */
         .video-overlay-content {
             transition: opacity 0.5s ease-in-out;
-        }
-        /* Smooth movement for the user preview circle */
-        .user-preview-circle {
-            transition: transform 0.3s ease-out; 
         }
 
         /* Arrow animation styles for video overlay */
@@ -154,91 +155,86 @@
         <h2 class="text-4xl font-bold">Section 3: Conclusion</h2>
     </section>
 
-    <div class="relative flex min-h-screen">
-        <div class="w-full md:ml-[33.333%] lg:ml-[25%] xl:ml-[20%] p-8 md:p-12 lg:p-16 relative z-0">
-            <div id="user-preview-circle" class="user-preview-circle fixed right-8 top-16 w-12 h-12 rounded-full bg-cover bg-center shadow-md z-20"
-                 style="background-image: url('https://placehold.co/48x48/FF6347/FFFFFF?text=User');">
-            </div> </div></div>
-    <div id="draggableContainer" class="relative md:absolute md:w-[570px] md:top-[15px] md:left-[360px] md:text-left text-80 text-center w-full md:w-auto relative overflow-visible pt-32">
-<h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
-  Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
-</h1>
-<p id="snap-target-row" class="max-w-xl mx-auto md:mx-0 mb-12" style="color: #A0A0A0;">
-  Huly offers a wide range of features to create and manage your project documentation. Huly's suite of collaborative editing tools boosts team efficiency.
-</p>
-<div id="main-wrapper">
-<div id="draggablePinWrapper"
-  class="absolute flex flex-col items-start cursor-grab active:cursor-grabbing select-none float-pin md:top-[20px] md:left-[100px]"
-  style="left:1px; top:-20px;">
-  <div class="relative w-[66px] h-[66px]">
-    <img id="draggablebox"
-     src="blue-pin.png"
-     alt="pin"
-     class="relative w-full h-full object-contain pointer-events-none [filter:drop-shadow(0_0_10px_rgba(0,123,255,0.8))]" />
-  </div>
-</div>
-</div>
-<div class="relative">
-    <div id="toolbar"
-        class="absolute md:absolute md:top-[-5px] md:left-[0px] z-50 mx-auto flex h-20 w-fit min-w-[330px]
-               rounded-md px-1.5 shadow-[0px_10px_20px_0px_#00000080] items-center
-               lg:-top-10 lg:left-11
-               md:-top-8 md:left-7 md:h-[30px] md:min-w-[218px] md:px-1
-               sm:-top-6 sm:left-0 sm:h-[27px] sm:min-w-[190px]"
-        style="background-color:#1E1E1E;">
-        <button id="btn-link" class="transition-all duration-200 flex h-7 cursor-pointer items-center rounded-md bg-blue-600 pl-2 pr-3 text-sm tracking-tight text-white md:h-[22px] md:px-1.5 md:text-xs sm:text-xs">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4 mr-1 md:h-3 md:w-3">
-                <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07L10 3.46"></path>
-                <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07L14 20.54"></path>
-            </svg>
-            <span>Link</span>
-        </button>
+    <div id="draggableContainer" class="relative w-full max-w-xl mx-auto text-center overflow-visible pt-32 md:text-left">
+        <h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
+            Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
+        </h1>
+        <p id="snap-target-row" class="max-w-xl mx-auto md:mx-0 mb-12" style="color: #A0A0A0;">
+            Huly offers a wide range of features to create and manage your project documentation. Huly's suite of collaborative editing tools boosts team efficiency.
+        </p>
+        <div id="main-wrapper">
+            <div id="draggablePinWrapper"
+                class="absolute flex flex-col items-start cursor-grab active:cursor-grabbing select-none float-pin md:top-[20px] md:left-[100px]"
+                style="left:1px; top:-20px;">
+                <div class="relative w-[66px] h-[66px]">
+                    <img id="draggablebox"
+                        src="blue-pin.png"
+                        alt="pin"
+                        class="relative w-full h-full object-contain pointer-events-none [filter:drop-shadow(0_0_10px_rgba(0,123,255,0.8))]" />
+                </div>
+            </div>
+        </div>
+        <div class="relative">
+            <div id="toolbar"
+                class="absolute md:absolute md:top-[-5px] md:left-[0px] z-50 mx-auto flex h-20 w-fit min-w-[330px]
+                        rounded-md px-1.5 shadow-[0px_10px_20px_0px_#00000080] items-center
+                        lg:-top-10 lg:left-11
+                        md:-top-8 md:left-7 md:h-[30px] md:min-w-[218px] md:px-1
+                        sm:-top-6 sm:left-0 sm:h-[27px] sm:min-w-[190px]"
+                style="background-color:#1E1E1E;">
+                <button id="btn-link" class="transition-all duration-200 flex h-7 cursor-pointer items-center rounded-md bg-blue-600 pl-2 pr-3 text-sm tracking-tight text-white md:h-[22px] md:px-1.5 md:text-xs sm:text-xs">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4 mr-1 md:h-3 md:w-3">
+                        <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07L10 3.46"></path>
+                        <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07L14 20.54"></path>
+                    </svg>
+                    <span>Link</span>
+                </button>
 
-        <button id="btn-bold" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                <path d="M8.176 16.331V7.621h4.756q1.31 0 2.186.389t1.317 1.079q.44.684.44 1.577 0 .696-.278 1.224-.277.522-.765.859-.482.33-1.102.47v.115q.678.03 1.27.383q.597.354.969.992q.37.633.37 1.508 0 .945-.469 1.688-.465.737-1.375 1.166t-2.244.429zm2.511-2.053h2.047q1.05 0 1.532-.4.48-.406.481-1.08 0-.492-.238-.87a1.6 1.6 0 0 0-.678-.591q-.435-.215-1.039-.215h-2.105zm0-4.855h1.862q.517 0 .916-.18.406-.186.638-.522.238-.336.238-.806 0-.644-.458-1.038-.452-.395-1.288-.395h-1.908z"></path>
-            </svg>
-            <span class="sr-only">Bold</span>
-        </button>
+                <button id="btn-bold" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+                        <path d="M8.176 16.331V7.621h4.756q1.31 0 2.186.389t1.317 1.079q.44.684.44 1.577 0 .696-.278 1.224-.277.522-.765.859-.482.33-1.102.47v.115q.678.03 1.27.383q.597.354.969.992q.37.633.37 1.508 0 .945-.469 1.688-.465.737-1.375 1.166t-2.244.429zm2.511-2.053h2.047q1.05 0 1.532-.4.48-.406.481-1.08 0-.492-.238-.87a1.6 1.6 0 0 0-.678-.591q-.435-.215-1.039-.215h-2.105zm0-4.855h1.862q.517 0 .916-.18.406-.186.638-.522.238-.336.238-.806 0-.644-.458-1.038-.452-.395-1.288-.395h-1.908z"></path>
+                    </svg>
+                    <span class="sr-only">Bold</span>
+                </button>
 
-        <button id="btn-italic" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                <path d="M12.193 6H17V7.556h-2.585l-3.328 9.888H7V18h5.807V16.444h2.586L12.068 6z"></path>
-            </svg>
-            <span class="sr-only">Italic</span>
-        </button>
+                <button id="btn-italic" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+                        <path d="M12.193 6H17V7.556h-2.585l-3.328 9.888H7V18h5.807V16.444h2.586L12.068 6z"></path>
+                    </svg>
+                    <span class="sr-only">Italic</span>
+                </button>
 
-        <button id="btn-underline" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                <path d="M12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v8.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v8.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 20h16v2H4z"></path>
-            </svg>
-            <span class="sr-only">Underline</span>
-        </button>
+                <button id="btn-underline" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+                        <path d="M12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v8.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v8.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 20h16v2H4z"></path>
+                    </svg>
+                    <span class="sr-only">Underline</span>
+                </button>
 
-        <button id="btn-strike" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                <path d="M12 10.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 11h16v2H4zM12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V12h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V12h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031z"></path>
-            </svg>
-            <span class="sr-only">Strikethrough</span>
-        </button>
+                <button id="btn-strike" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+                        <path d="M12 10.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 11h16v2H4zM12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V12h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V12h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031z"></path>
+                    </svg>
+                    <span class="sr-only">Strikethrough</span>
+                </button>
 
-        <span class="ml-2 h-5 w-px bg-gray-600 md:h-4"></span>
+                <span class="ml-2 h-5 w-px bg-gray-600 md:h-4"></span>
 
-        <button class="ml-2.5 md:ml-1.5 sm:ml-1 p-1 rounded-md hover:bg-gray-700">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                <path d="M12 12c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3zm0 2c-2.671 0-8 1.348-8 4v2h16v-2c0-2.652-5.329-4-8-4z"></path>
-            </svg>
-            <span class="sr-only">Mention</span>
-        </button>
+                <button class="ml-2.5 md:ml-1.5 sm:ml-1 p-1 rounded-md hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+                        <path d="M12 12c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3zm0 2c-2.671 0-8 1.348-8 4v2h16v-2c0-2.652-5.329-4-8-4z"></path>
+                    </svg>
+                    <span class="sr-only">Mention</span>
+                </button>
 
-        <button id="btn-highlight" class="ml-2 md:ml-1.5 p-1 rounded-md hover:bg-gray-700">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                <path d="m20.707 5.826-3.535-3.533a.999.999 0 0 0-1.408-.006L7.096 10.82a1.01 1.01 0 0 0-.273.488l-1.024 4.437L4 18h2.828l1.142-1.129 3.588-.828c.18-.042.345-.133.477-.262l8.667-8.535a1 1 0 0 0 .005-1.42zm-9.369 7.833-2.121-2.12 7.243-7.131 2.12 2.12-7.242 7.131zM4 20h16v2H4z"></path>
+                <button id="btn-highlight" class="ml-2 md:ml-1.5 p-1 rounded-md hover:bg-gray-700">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+                        <path d="m20.707 5.826-3.535-3.533a.999.999 0 0 0-1.408-.006L7.096 10.82a1.01 1.01 0 0 0-.273.488l-1.024 4.437L4 18h2.828l1.142-1.129 3.588-.828c.18-.042.345-.133.477-.262l8.667-8.535a1 1 0 0 0 .005-1.42zm-9.369 7.833-2.121-2.12 7.243-7.131 2.12 2.12-7.242 7.131zM4 20h16v2H4z"></path>
 </svg>
 <span class="sr-only">Toggle Highlight</span>
 </button>
 </div>
-</div> </div>   
+</div> 
 <div class="relative mt-12 md:absolute md:top-[330px] md:left-[365px] md:w-[570px]" id="editor-container">
 <div id="editor" contenteditable="true" 
 class="relative z-10 whitespace-pre-wrap leading-relaxed text-white font-normal p-2 focus:outline-none ">
@@ -343,7 +339,7 @@ document.execCommand('copy');
 <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" viewBox="0 0 12 12" class="m-auto h-auto w-3.5 stroke-white sm:w-3"><path d="M6 1v10M1 6h10"></path></svg>
 </div>
 <div class="flex h-10 w-10 items-center justify-center rounded-full bg-slate-8 md:h-[30px] md:w-[30px] sm:h-[27px] sm:w-[27px]">
-<img class="m-auto h-auto w-5 sm:w-3" src="camera.svg" height="20" width="20" loading="lazy" alt="">
+<img class="m-auto h-auto w-5 sm:w-3" src="data:image/svg+xml;base64,PHN2Z...=" height="18" width="18" loading="lazy" alt="">
 </div>
 <div class="flex h-10 w-10 items-center justify-center rounded-full bg-slate-8 md:h-[30px] md:w-[30px] sm:h-[27px] sm:w-[27px]">
 <img class="m-auto h-auto w-4.5 sm:w-3" src="data:image/svg+xml;base64,PHN2Z...=" height="18" width="18" loading="lazy" alt="">
@@ -370,7 +366,6 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                 document.getElementById('video-overlay-1'), // Collaborate
                 document.getElementById('video-overlay-2')  // Version History
             ];
-            const userPreviewCircle = document.getElementById('user-preview-circle');
             const videoCardContainer = document.getElementById('video-card-container');
             const leftVideoPanel = document.getElementById('left-video-panel'); // Get the video panel itself
             
@@ -417,21 +412,13 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                 }
             }
 
-            function updateUserPreviewCirclePosition() {
-                const scrollY = window.scrollY;
-                const initialRight = 32; 
-                const initialTop = 64; 
-
-                const newTop = initialTop - (scrollY * 0.1);
-                userPreviewCircle.style.top = `${Math.max(16, newTop)}px`;
-            }
-
             function updateVideoCardPosition() {
                 const scrollY = window.scrollY;
                 const cardHeight = videoCardContainer.offsetHeight;
                 const viewportHeight = window.innerHeight;
                 
                 // Get absolute positions of section2 relative to the document
+                const section2Rect = section2.getBoundingClientRect();
                 const section2AbsoluteTop = section2.offsetTop;
                 const section2AbsoluteBottom = section2.offsetTop + section2.offsetHeight;
 
@@ -439,9 +426,7 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                 const idealFixedTop = (viewportHeight - cardHeight) / 2;
 
                 // Calculate the scrollY points where the card should "pin"
-                // When scrollY reaches this point, the card's idealFixedTop aligns with section2AbsoluteTop
                 const pinTopScroll = section2AbsoluteTop - idealFixedTop;
-                // When scrollY reaches this point, the card's bottom aligns with section2AbsoluteBottom
                 const pinBottomScroll = section2AbsoluteBottom - viewportHeight + idealFixedTop;
 
                 if (scrollY < pinTopScroll) {
@@ -467,19 +452,16 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
 
             // Initial calls to set the correct state and positions on page load
             updateVideoOverlayContent();
-            updateUserPreviewCirclePosition();
             updateVideoCardPosition(); 
 
             // Add scroll event listener
             window.addEventListener('scroll', () => {
                 updateVideoOverlayContent();
-                updateUserPreviewCirclePosition();
                 updateVideoCardPosition(); 
             });
 
             // Handle window resize to ensure responsiveness
             window.addEventListener('resize', () => {
-                updateUserPreviewCirclePosition();
                 updateVideoCardPosition(); 
             });
         });
