--- a/index.html
+++ b/index.html
@@ -149,97 +149,80 @@
         <h2 class="text-4xl font-bold">Section 3: Transition</h2>
     </section>
 
-    <section id="section-4" class="relative min-h-[1500px] bg-gray-800 text-white">
-        <div class="p-8">
-            <h2 class="text-4xl font-bold mb-4">Section 4: Interactive Content</h2>
-            <p class="text-lg">This is where the video card will be active and follow your scroll, staying vertically centered.</p>
-            <div class="h-[1000px] flex items-center justify-center text-gray-400">
-                <p>Scroll down to see the card move!</p>
-            </div>
-        </div>
-
-        
-    </section>
-
-    <section id="section-5" class="relative min-h-[800px] bg-gray-900 text-white flex items-center justify-center">
-        <h2 class="text-4xl font-bold">Section 5: Conclusion</h2>
-    </section>
-
-    <div id="draggableContainer" class="relative w-full max-w-xl mx-auto text-center overflow-visible pt-32 md:text-left">
-        <h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
-            Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
-        </h1>
-        <p id="snap-target-row" class="max-w-xl mx-auto md:mx-0 mb-12" style="color: #A0A0A0;">
-            Huly offers a wide range of features to create and manage your project documentation. Huly's suite of collaborative editing tools boosts team efficiency.
-        </p>
-        <div id="main-wrapper">
-            <div id="draggablePinWrapper"
-                class="absolute flex flex-col items-start cursor-grab active:cursor-grabbing select-none float-pin md:top-[20px] md:left-[100px]"
-                style="left:1px; top:-20px;">
-                <div class="relative w-[66px] h-[66px]">
-                    <img id="draggablebox"
-                        src="blue-pin.png"
-                        alt="pin"
-                        class="relative w-full h-full object-contain pointer-events-none [filter:drop-shadow(0_0_10px_rgba(0,123,255,0.8))]" />
-                </div>
-            </div>
-        </div>
-        <div class="relative">
-            <div id="toolbar"
-                class="absolute md:absolute md:top-[-5px] md:left-[0px] z-50 mx-auto flex h-20 w-fit min-w-[330px]
-                        rounded-md px-1.5 shadow-[0px_10px_20px_0px_#00000080] items-center
-                        lg:-top-10 lg:left-11
-                        md:-top-8 md:left-7 md:h-[30px] md:min-w-[218px] md:px-1
-                        sm:-top-6 sm:left-0 sm:h-[27px] sm:min-w-[190px]"
-                style="background-color:#1E1E1E;">
-                <button id="btn-link" class="transition-all duration-200 flex h-7 cursor-pointer items-center rounded-md bg-blue-600 pl-2 pr-3 text-sm tracking-tight text-white md:h-[22px] md:px-1.5 md:text-xs sm:text-xs">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4 mr-1 md:h-3 md:w-3">
-                        <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07L10 3.46"></path>
-                        <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07L14 20.54"></path>
-                    </svg>
-                    <span>Link</span>
-                </button>
-
-                <button id="btn-bold" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                        <path d="M8.176 16.331V7.621h4.756q1.31 0 2.186.389t1.317 1.079q.44.684.44 1.577 0 .696-.278 1.224-.277.522-.765.859-.482.33-1.102.47v.115q.678.03 1.27.383q.597.354.969.992q.37.633.37 1.508 0 .945-.469 1.688-.465.737-1.375 1.166t-2.244.429zm2.511-2.053h2.047q1.05 0 1.532-.4.48-.406.481-1.08 0-.492-.238-.87a1.6 1.6 0 0 0-.678-.591q-.435-.215-1.039-.215h-2.105zm0-4.855h1.862q.517 0 .916-.18.406-.186.638-.522.238-.336.238-.806 0-.644-.458-1.038-.452-.395-1.288-.395h-1.908z"></path>
-                    </svg>
-                    <span class="sr-only">Bold</span>
-                </button>
-
-                <button id="btn-italic" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                        <path d="M12.193 6H17V7.556h-2.585l-3.328 9.888H7V18h5.807V16.444h2.586L12.068 6z"></path>
-                    </svg>
-                    <span class="sr-only">Italic</span>
-                </button>
-
-                <button id="btn-underline" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                        <path d="M12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v8.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v8.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 20h16v2H4z"></path>
-                    </svg>
-                    <span class="sr-only">Underline</span>
-                </button>
-
-                <button id="btn-strike" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                        <path d="M12 10.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 11h16v2H4zM12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V12h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V12h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031z"></path>
-                    </svg>
-                    <span class="sr-only">Strikethrough</span>
-                </button>
-
-                <span class="ml-2 h-5 w-px bg-gray-600 md:h-4"></span>
-
-                <button class="ml-2.5 md:ml-1.5 sm:ml-1 p-1 rounded-md hover:bg-gray-700">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                        <path d="M12 12c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3zm0 2c-2.671 0-8 1.348-8 4v2h16v-2c0-2.652-5.329-4-8-4z"></path>
-                    </svg>
-                    <span class="sr-only">Mention</span>
-                </button>
-
-                <button id="btn-highlight" class="ml-2 md:ml-1.5 p-1 rounded-md hover:bg-gray-700">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
-                        <path d="m20.707 5.826-3.535-3.533a.999.999 0 0 0-1.408-.006L7.096 10.82a1.01 1.01 0 0 0-.273.488l-1.024 4.437L4 18h2.828l1.142-1.129 3.588-.828c.18-.042.345-.133.477-.262l8.667-8.535a1 1 0 0 0 .005-1.42zm-9.369 7.833-2.121-2.12 7.243-7.131 2.12 2.12-7.242 7.131zM4 20h16v2H4z"></path>
+<section id="section-4" class="relative min-h-[1500px] bg-gray-800 text-white">
+<div class="p-8">
+<h2 class="text-4xl font-bold mb-4">Section 4: Interactive Content</h2>
+<p class="text-lg">This is where the video card will be active and follow your scroll, staying vertically centered.</p>
+<div class="h-[1000px] flex items-center justify-center text-gray-400">
+<p>Scroll down to see the card move!</p>
+</div>
+</div>
+<div id="draggableContainer" class="relative w-full max-w-xl mx-auto text-center overflow-visible pt-32 md:text-left">
+<h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
+Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
+</h1>
+<p id="snap-target-row" class="max-w-xl mx-auto md:mx-0 mb-12" style="color: #A0A0A0;">
+Huly offers a wide range of features to create and manage your project documentation. Huly's suite of collaborative editing tools boosts team efficiency.
+</p>
+<div id="main-wrapper">
+<div id="draggablePinWrapper"
+class="absolute flex flex-col items-start cursor-grab active:cursor-grabbing select-none float-pin md:top-[20px] md:left-[100px]"
+style="left:1px; top:-20px;">
+<div class="relative w-[66px] h-[66px]">
+<img id="draggablebox"
+src="blue-pin.png"
+alt="pin"
+class="relative w-full h-full object-contain pointer-events-none [filter:drop-shadow(0_0_10px_rgba(0,123,255,0.8))]" />
+</div></div></div>
+<div class="relative">
+<div id="toolbar"
+class="absolute md:absolute md:top-[-5px] md:left-[0px] z-50 mx-auto flex h-20 w-fit min-w-[330px]
+rounded-md px-1.5 shadow-[0px_10px_20px_0px_#00000080] items-center
+lg:-top-10 lg:left-11
+md:-top-8 md:left-7 md:h-[30px] md:min-w-[218px] md:px-1
+sm:-top-6 sm:left-0 sm:h-[27px] sm:min-w-[190px]"
+style="background-color:#1E1E1E;">
+<button id="btn-link" class="transition-all duration-200 flex h-7 cursor-pointer items-center rounded-md bg-blue-600 pl-2 pr-3 text-sm tracking-tight text-white md:h-[22px] md:px-1.5 md:text-xs sm:text-xs">
+<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 w-4 mr-1 md:h-3 md:w-3">
+<path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07L10 3.46"></path>
+<path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07L14 20.54"></path>
+</svg>
+<span>Link</span>
+</button>
+<button id="btn-bold" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+<path d="M8.176 16.331V7.621h4.756q1.31 0 2.186.389t1.317 1.079q.44.684.44 1.577 0 .696-.278 1.224-.277.522-.765.859-.482.33-1.102.47v.115q.678.03 1.27.383q.597.354.969.992q.37.633.37 1.508 0 .945-.469 1.688-.465.737-1.375 1.166t-2.244.429zm2.511-2.053h2.047q1.05 0 1.532-.4.48-.406.481-1.08 0-.492-.238-.87a1.6 1.6 0 0 0-.678-.591q-.435-.215-1.039-.215h-2.105zm0-4.855h1.862q.517 0 .916-.18.406-.186.638-.522.238-.336.238-.806 0-.644-.458-1.038-.452-.395-1.288-.395h-1.908z"></path>
+</svg>
+<span class="sr-only">Bold</span>
+</button>
+<button id="btn-italic" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+<path d="M12.193 6H17V7.556h-2.585l-3.328 9.888H7V18h5.807V16.444h2.586L12.068 6z"></path>
+</svg>
+<span class="sr-only">Italic</span>
+</button>
+<button id="btn-underline" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+<path d="M12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v8.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v8.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 20h16v2H4z"></path>
+</svg>
+<span class="sr-only">Underline</span>
+</button>
+<button id="btn-strike" class="ml-1.5 transition-all duration-200 p-1 rounded-md hover:bg-gray-700">
+<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+<path d="M12 10.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V5h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V5h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031zM4 11h16v2H4zM12 17.5q-2.062 0-3.312-1.031-1.25-1.03-1.25-2.875V12h2v1.625q0 1.125.438 1.625.437.5 1.187.5.75 0 1.188-.5.437-.5.437-1.625V12h2v1.625q0 1.844-1.25 2.875-1.25 1.031-3.312 1.031z"></path>
+</svg>
+<span class="sr-only">Strikethrough</span>
+</button>
+<span class="ml-2 h-5 w-px bg-gray-600 md:h-4"></span>
+<button class="ml-2.5 md:ml-1.5 sm:ml-1 p-1 rounded-md hover:bg-gray-700">
+<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+<path d="M12 12c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3zm0 2c-2.671 0-8 1.348-8 4v2h16v-2c0-2.652-5.329-4-8-4z"></path>
+</svg>
+<span class="sr-only">Mention</span>
+</button>
+<button id="btn-highlight" class="ml-2 md:ml-1.5 p-1 rounded-md hover:bg-gray-700">
+<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="h-5 w-5 md:h-4 md:w-4 fill-gray-400">
+<path d="m20.707 5.826-3.535-3.533a.999.999 0 0 0-1.408-.006L7.096 10.82a1.01 1.01 0 0 0-.273.488l-1.024 4.437L4 18h2.828l1.142-1.129 3.588-.828c.18-.042.345-.133.477-.262l8.667-8.535a1 1 0 0 0 .005-1.42zm-9.369 7.833-2.121-2.12 7.243-7.131 2.12 2.12-7.242 7.131zM4 20h16v2H4z"></path>
 </svg>
 <span class="sr-only">Toggle Highlight</span>
 </button>
@@ -271,7 +254,6 @@ style="background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy5
 <img src="board.webp" alt="chat"
 class="w-[360px] h-[240px] md:w-[570px] md:h-[450px] rounded-[20px]" />
 </div>
-
 <div  class="relative flex flex-wrap md:absolute md:top-[960px] md:left-[365px] md:w-[570px] md:h-[50px]">
 <div class="absolute left-0 top-0 h-[31.5%] w-px xl:h-[33%] sm:hidden"></div>
 <p class="relative max-w-full break-words -mt-8 pb-3 pt-[68px] lg:-mt-9 md:mt-[-19px] md:pt-[47px] sm:mt-[-22px] sm:pt-[38px]">
@@ -291,7 +273,7 @@ available within the Huly document editor.
 </p>
 </div>
 <div class="relative flex items-center justify-center
-         top-0 md:absolute md:top-[1100px] md:left-[365px]"
+top-0 md:absolute md:top-[1100px] md:left-[365px]"
 >
   <img id="visible" 
     src="code.webp"
@@ -367,7 +349,12 @@ class="absolute top-[80px] left-[50px] w-[250px] sm:hidden">
 class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-lg"/>
 </div>
 </div>
- <script>
+</section>
+
+<section id="section-5" class="relative min-h-[800px] bg-gray-900 text-white flex items-center justify-center">
+<h2 class="text-4xl font-bold">Section 5: Conclusion</h2>
+</section>
+<script>
         document.addEventListener('DOMContentLoaded', () => {
             const videoOverlayStates = [
                 document.getElementById('video-overlay-0'), // Knowledge at Your Fingertip
