--- a/index.html
+++ b/index.html
@@ -137,19 +137,19 @@
         </div>
     </div>
 
-    <section id="section-1" class="relative min-h-[800px] bg-gray-900 text-white flex items-center justify-center">
+    <section id="section-1" class="relative min-h-[800px] bg-gray-900 text-white flex items-center justify-center pt-32">
         <h2 class="text-4xl font-bold">Section 1: Introduction</h2>
     </section>
 
-    <section id="section-2" class="relative min-h-[700px] bg-gray-800 text-white flex items-center justify-center">
+    <section id="section-2" class="relative min-h-[700px] bg-gray-800 text-white flex items-center justify-center pt-32">
         <h2 class="text-4xl font-bold">Section 2: More Content</h2>
     </section>
 
-    <section id="section-3" class="relative min-h-[700px] bg-gray-700 text-white flex items-center justify-center">
+    <section id="section-3" class="relative min-h-[700px] bg-gray-700 text-white flex items-center justify-center pt-32">
         <h2 class="text-4xl font-bold">Section 3: Transition</h2>
     </section>
 
-<section id="section-4" class="relative min-h-[2500px] bg-gray-800 text-white">
+<section id="section-4" class="relative min-h-[2500px] bg-gray-800 text-white overflow-hidden pt-32">
 <div class="p-8">
 <h2 class="text-4xl font-bold mb-4">Section 4: Interactive Content</h2>
 <p class="text-lg">This is where the video card will be active and follow your scroll, staying vertically centered.</p>
