--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
 
 <section id="section-4" class="relative min-h-[2500px] bg-gray-800 text-white overflow-hidden pt-32">
-<div id="draggableContainer" class="relative w-full max-w-xl mx-auto text-center overflow-visible pt-32 md:text-left">
+<div id="draggableContainer" class="relative w-full max-w-xl mx-auto text-center overflow-visible md:text-left">
 <h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
 Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
 </h1>
