--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
     </section>
 
 <section id="section-4" class="relative min-h-[2500px] bg-gray-800 text-white overflow-hidden pt-32">
-<div id="draggableContainer" class="relative w-full max-w-xl mx-auto text-center overflow-visible md:text-left">
+<div id="draggableContainer" class="relative md:absolute md:w-[570px] md:top-[15px] md:left-[360px] md:text-left text-80 text-center w-full md:w-auto relative overflow-visible pt-32">
 <h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
-Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
+  Knowledge at <span class="text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">Fingertips</span>
 </h1>
 <p id="snap-target-row" class="max-w-xl mx-auto md:mx-0 mb-12" style="color: #A0A0A0;">
 Huly offers a wide range of features to create and manage your project documentation. Huly's suite of collaborative editing tools boosts team efficiency.
