--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@ style="background-color:#1E1E1E;">
 <span class="sr-only">Toggle Highlight</span>
 </button>
 </div>
-</div> 
-<div class="relative mt-12 md:absolute md:top-[330px] md:left-[250px] md:w-[570px]" id="editor-container">
+</div></div>
+<div class="relative mt-12 md:absolute md:top-[330px] md:left-[360px] md:w-[570px]" id="editor-container">
 <div id="editor" contenteditable="true" 
 class="relative z-10 whitespace-pre-wrap leading-relaxed text-white font-normal p-2 focus:outline-none ">
 <span class="font-semibold">Documents in Huly</span> can be used for sharing reference materials among team members, collaborating on plans and roadmaps, storing meeting notes and assigning action items.
