--- a/index.html
+++ b/index.html
@@ -81,6 +81,53 @@
     </style>
 </head>
 <body class="bg-[#0D0D0D] text-gray-800">
+    <div class="pointer-events-none absolute inset-x-0 h-32 lg:h-24 duration-200 bg-gradient-to-b from-black lg:from-black/75 opacity-100" style="mask: linear-gradient(black, black, transparent); backdrop-filter: blur(8px);"></div>
+<div class="
+hidden lg:block
+fixed inset-x-0 top-0 bg-background/25 backdrop-blur
+pointer-events-none opacity-0 
+lg:pt-16">
+<div class="border-y border-primary/10 h-full py-4">
+<div class="mx-auto w-full px-6 xl:max-w-7xl relative">
+<div class="flex gap-1.5 -mx-3"></div></div></div></div></header>
+<!--user preview-->
+<div class="relative h-svh w-full border-b border-border pb-px overflow-hidden md:overflow-x-hidden">
+<div class="relative w-full h-full">
+<div class="mx-auto w-full px-6 xl:max-w-7xl flex h-full flex-col">
+<div class="absolute -inset-y-[25%] -right-24 flex w-[100vw] flex-col xl:-right-6 xl:w-[1200px]" style="mask-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(255, 255, 255)); opacity: 1; transform: none;">
+<div class="flex flex-col w-full h-full blur">
+<div class="grow" style="background:conic-gradient(from 180deg at 99% 40% in lab, rgb(46,46,46) 18deg, rgb(90,18,6) 36deg, rgba(17, 17, 17, 0) 90deg, rgba(17, 17, 17, 0) 342deg, rgb(46, 46, 46) 360deg)"></div>
+<div class="grow" style="background:conic-gradient(from 0deg at 99% 60% in lab, rgb(46,46,46) 0deg, rgba(17, 17, 17, 0) 18deg, rgba(17, 17, 17, 0) 270deg, rgb(90,18,6) 324deg, rgb(46, 46, 46) 342deg)"></div></div>
+<canvas class="absolute inset-0 h-full w-full" width="1023" height="2709"></canvas></div>
+<div class="relative w-full flex grow items-center justify-start z-20">
+<div class="space-y-16"><div>
+<div class="absolute inset-0 top-20 flex justify-center items-center grow">
+<div><div style="opacity: 1; transform: none;">
+<img alt="outline1" loading="lazy" width="2299" height="779" decoding="async" data-nimg="1" class="max-w-screen sm:max-w-full xl:max-w-5xl pointer-events-none select-none" style="color:transparent;mask-image:linear-gradient(30deg, rgba(255, 209, 217,0) 15%, rgba(255, 209, 217, 1), rgba(255, 209, 217, 1))" src="assets/outline1.webp?&amp;w=3840&amp;q=75"/></div>
+<!-- Input box -->
+<div class="flex justify-center relative z-10 w-full mt-12" style="opacity: 1;">
+<div class="w-full max-w-xl">
+<form class="
+          relative w-full items-center gap-3 bg-gradient-to-tr
+          rounded-3xl p-px overflow-hidden
+          from-primary/5 to-primary/20
+        ">
+<input type="text" class="w-full h-20 lg:h-[68px] rounded-3xl border-none py-5 pl-5 pr-16 focus:outline-none focus:ring-2 focus:ring-zinc-500 focus:ring-white/50 bg-[#000000] text-gray-400 placeholder-gray/50" placeholder="Ask indox anything..." name="query" value="">
+<div class="absolute inset-y-2 right-2 lg:right-4 flex items-center">
+<button aria-label="Submit a query to INDOX" type="submit" class="relative isolate inline-flex items-center justify-center border text-base/6 uppercase font-mono tracking-widest shrink-0 focus:outline-none data-[focus]:outline data-[focus]:outline-2 data-[focus]:outline-offset-2 data-[focus]:outline-blue-500 data-[disabled]:opacity-50 [&amp;>[data-slot=icon]]:-mx-0.5 [&amp;>[data-slot=icon]]:my-0.5 [&amp;>[data-slot=icon]]:shrink-0 [&amp;>[data-slot=icon]]:sm:my-1 aspect-square px-3.5 py-1.5 sm:text-sm [&amp;>[data-slot=icon]]:size-4 [&amp;>[data-slot=icon]]:sm:size-3 gap-x-2 bg-[--btn-bg] text-[--btn-text] border-[--btn-border] hover:bg-[--btn-hover] hover:border-[--btn-hover] rounded-full [--btn-bg:theme(colors.primary)] [--btn-border:theme(colors.primary)] [--btn-text:theme(colors.background)] [--btn-hover:theme(colors.primary/80%)] opacity-50">
+<span class="absolute left-1/2 top-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 [@media(pointer:fine)]:hidden" aria-hidden="true"></span>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" data-slot="icon" class="!size-4">
+<path fill-rule="evenodd" d="M12.97 3.97a.75.75 0 0 1 1.06 0l7.5 7.5a.75.75 0 0 1 0 1.06l-7.5 7.5a.75.75 0 1 1-1.06-1.06l6.22-6.22H3a.75.75 0 0 1 0-1.5h16.19l-6.22-6.22a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd"></path></svg></button>
+</div></form></div></div></div></div></div></div></div>
+<!-- Bottom AI message section -->
+<div class="relative w-full flex justify-end items-end p-4">
+<div class="w-14 h-14 border-2 border-white rounded-full flex items-center justify-center">
+<svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" class="w-8 h-8">
+<path fill-rule="evenodd" d="M12 2.25a.75.75 0 0 1 .75.75v16.19l6.22-6.22a.75.75 0 1 1 1.06 1.06l-7.5 7.5a.75.75 0 0 1-1.06 0l-7.5-7.5a.75.75 0 1 1 1.06-1.06l6.22 6.22V3a.75.75 0 0 1 .75-.75Z" clip-rule="evenodd"/>
+</svg></div></div>
+<div class="flex flex-col items-end gap-6 sm:gap-8 lg:gap-12 md:flex-row">
+<div class="flex flex-col gap-3 sm:flex-row">
+</div></div></div></div></div></div>
 
     <div id="video-card-container" class="fixed left-8 z-10 w-[300px] h-[300px]" style="top: 50%; transform: translateY(-50%);">
         <div id="left-video-panel" class="relative bg-black rounded-xl shadow-lg w-full h-full overflow-hidden">
