--- a/index.html
+++ b/index.html
@@ -791,10 +791,44 @@ Create customized virtual office spaces for any department or event with high qu
 </div></div>
     </section>
 
-    <section id="section-3" class="relative min-h-[700px] bg-gray-700 pt-32">
-        <h2 class="text-4xl font-bold">Section 3: Transition</h2>
-    </section>
+<section id="section-3" class="relative min-h-[1100px] bg-gray-700 pt-32">
+<div class="relative md:absolute md:top-[100px] md:left-[360px] md:text-left text-80 text-center w-full md:w-auto">
+<h1 class="text-4xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-tl from-slate-100 via-violet-500 to-white">
+  INDOX <span class="text-transparent bg-clip-text bg-gradient-to-tl from-slate-100 via-violet-500 to-white">META BRAIN</span>
+</h1>
+<p class="max-w-xl mx-auto md:mx-0 mb-12" style="color: #A0A0A0;">
+Connect every element of your workflow to build a dynamic knowledge base. Soon, Huly AI will turn it into a powerful asset — a second brain for your team.
+</p>
+</div>
+<!-- Use a flex layout for mobile, absolute for md+ -->
+<div class="card-grid relative flex flex-col items-center gap-6 md:block">
+<!-- Image 1 -->
+<div class="md:absolute md:top-[120px] md:left-[100px] z-[2px]">
+<img src="create-task.png" alt="create tasks"
+class="w-[360px] h-[240px] md:w-[534px] md:h-[508px] rounded-[20px] " />
+</div>
+<!-- Image 2 -->
+<div class="md:absolute md:top-[140px] md:left-[670px]">
+<img src="take-notes.png" alt="take notes"
+class="w-[360px] h-[240px] md:w-[250px] md:h-[240px] rounded-[20px] shadow-xl bg-[#111]" />
+</div>
+<!-- Image 3 -->
+<div class="md:absolute md:top-[400px] md:left-[400px]">
+<img src="sync.png" alt="Sync"
+class="w-[360px] h-[240px] md:w-[520px] md:h-[232px] rounded-[20px] shadow-xl bg-[#111]" />
+</div>
+<!-- Image 4 -->
+<div class="md:absolute md:top-[650px] md:left-[400px]">
+<img src="chat.png" alt="chat"
+class="w-[360px] h-[240px] md:w-[250px] md:h-[240px] rounded-[20px] shadow-xl bg-[#111]" />
+</div>
+<!-- Image 5 -->
+<div class="md:absolute md:top-[650px] md:left-[670px]">
+<img src="manage.png" alt="manage"
+class="w-[360px] h-[240px] md:w-[250px] md:h-[240px] rounded-[20px] shadow-xl bg-[#111]" />
+</div></div>
 
+</section>
 <section id="section-4" class="relative min-h-[2000px] bg-gray-800 text-white overflow-hidden pt-32">
 <div id="draggableContainer" class="relative md:absolute md:w-[570px] md:top-[15px] md:left-[360px] md:text-left text-80 text-center w-full md:w-auto relative overflow-visible pt-32">
 <h1 class="text-5xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-yellow-500 via-red-500 to-pink-500">
